kubeflow-manifests/common/knative/knative-serving/overlays/gateways/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kserve-gateway
  namespace: istio-system
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: kserve-certificate

---

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kserve-route
  namespace: istio-system
  labels:
    gateway: kserve-gateway
spec:
  parentRefs:
  - name: kserve-gateway
  hostnames:
  - "*.admin-profile.<<domain>>"
  rules:
  - backendRefs:
    - name: istio-ingressgateway
      port: 80
